# Repositorio-de-prueba

./: Makefile  README.md  pyproject.toml
carpetaprueba/: holamundo,py
docs/: mkdocs.yml
docs/docs/: index.md
prueba1/: __init__.py  dataset.py  features.py  plots.py
prueba1/modeling/: predict.py  train.py
