[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prueba1"
version = "0.0.1"
description = "Carpeta de pruebas"
authors = [
  { name = "bruno" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["prueba1"]
include = ["pyproject.toml", "prueba1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["prueba1"]
force-sort-within-sections = true

